1. Make small changes to the html code to prevent extra spaces from appearing on the page; 2. Stylize links referring to sources.

--- a/style/style.scss
+++ b/style/style.scss
@@ -134,6 +134,12 @@ ol {
   font-size: 0.5rem;
   line-height: 0.5rem;
   vertical-align: top;
+  color: #5555aa;
+  transition: color 0.1s linear 0.01s;
+}
+
+.sourceLink:hover {
+  color: #55aa55;
 }
 
 .picturesAlbum {
